每秒200条Can数据上行,偶现内存溢出,程序未崩溃

--- a/Project/Eth_freertos.uvprojx
+++ b/Project/Eth_freertos.uvprojx
@@ -420,6 +420,11 @@
               <FilePath>..\User\main.c</FilePath>
             </File>
             <File>
+              <FileName>app_mqtt.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\User\app_mqtt.c</FilePath>
+            </File>
+            <File>
               <FileName>app_tcp_client.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\User\app_tcp_client.c</FilePath>
